# service/userservice.go
@@ -4,13 +4,15 @@ import (
 	"github.com/gin-gonic/gin"
 	"main/models"
 	"net/http"
+	"strconv"
 )
 
 //注意这不是注释  '//@'是用来添加特定地注释 这种注释通常被称为Swagger注解 它们用于为API定义添加元数据和描述
 //swagger可以解析这些注解 并生成相应地API文档
 
 // GetUserList
-// @Tags 首页
+// @Summary 所有用户
+// @Tags 用户模块
 // @Success 200 {string} json{"code","message"}
 // @Router /user/getUserList [get]
 func GetUserList(c *gin.Context) {
@@ -18,5 +20,75 @@ func GetUserList(c *gin.Context) {
 	data = models.GetUserList()
 	c.JSON(http.StatusOK, gin.H{
 		"message": data,
+	})
+}
+
+//summary = 总结，概要     param = 参数
+
+// CreateUser
+// @Summary 新增用户
+// @Tags 用户模块
+// @param name query string false "用户名"
+// @param password query string false "密码"
+// @param repassword query string false "确认密码"
+// @Success 200 {string} json{"code","message"}
+// @Router /user/createUser [get]
+func CreateUser(c *gin.Context) {
+	//创建新用户
+	//先创建一个用户模板 然后通过c获取参数
+	user := models.UserBasic{}
+	user.Name = c.Query("name")
+	password := c.Query("password")
+	repassword := c.Query("repassword")
+	//判断密码
+	if password != repassword {
+		c.JSON(-1, gin.H{
+			"message": "两次密码不一致",
+		})
+		return
+	}
+	user.PassWord = password
+	//去数据库创建用户
+	models.CreateUser(user)
+	c.JSON(200, gin.H{
+		"message": "新增一名用户成功！",
+	})
+}
+
+// DeleteUser
+// @Summary 删除用户
+// @Tags 用户模块
+// @param id query string false "id"
+// @Success 200 {string} json{"code","message"}
+// @Router /user/deleteUser [get]
+func DeleteUser(c *gin.Context) {
+	//删除用户  根据ID
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.Query("id"))
+	user.ID = uint(id)
+	models.DeleteUser(user)
+	c.JSON(200, gin.H{
+		"message": "删除用户成功",
+	})
+}
+
+// UpdateUser
+// @Summary 更新用户
+// @Tags 用户模块
+// @param id formData string false "id"
+// @param name formData string false "name"
+// @param password formData string false "password"
+// @Success 200 {string} json{"code","message"}
+// @Router /user/updateUser [post]
+func UpdateUser(c *gin.Context) {
+	//更新  根据ID
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.PostForm("id"))
+	user.ID = uint(id)
+	user.Name = c.PostForm("name")
+	user.PassWord = c.PostForm("password")
+	models.UpdateUser(user)
+	c.JSON(200, gin.H{
+		"message": "更新用户成功",
 	})
 }
